--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Users/dannluciano/massim-2011-1.0/javaagents/target/dependency/apltk-0.1.jar"/>
-	<classpathentry kind="lib" path="/Users/dannluciano/massim-2011-1.0/javaagents/target/dependency/eis-0.3.jar"/>
-	<classpathentry kind="lib" path="/Users/dannluciano/massim-2011-1.0/javaagents/target/dependency/eismassim-1.0.jar"/>
-	<classpathentry kind="lib" path="/Users/dannluciano/massim-2011-1.0/javaagents/target/dependency/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/apltk-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/eis-0.3.jar"/>
+	<classpathentry kind="lib" path="lib/eismassim-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
